# codility

./: .gitignore  CMakeLists.txt  Codility.sln  README.md
ASML Jonathan/: ASML Jonathan.cpp  ASML Jonathan.vcxproj  ASML Jonathan.vcxproj.filters
AltenNov2024/: CMakeLists.txt
AltenNov2024/Problem1/: CMakeLists.txt  hello_test.cc
AltenNov2024/Problem2/: CMakeLists.txt  CleanProject.cpp  CleanProject.h  hello_test.cc
AltenNov2024/Problem3/: CMakeLists.txt  CleanProject.cpp  CleanProject.h  hello_test.cc
ArraySwap/: ArraySwap.cpp  ArraySwap.vcxproj.filters
Arrays/: CMakeLists.txt
Arrays/ArraySwap/: ArraySwap.vcxproj  Text.txt
Arrays/Cyclic Rotation/: CMakeLists.txt  CleanProject.cpp  hello_test.cc
Arrays/OddOccurrencesInArray/: CleanProject.cpp  OddOccurrencesInArray.cpp  OddOccurrencesInArray.vcxproj  OddOccurrencesInArray.vcxproj.filters  hello_test.cc
Blank/: CMakeLists.txt  CleanProject.cpp  hello_test.cc
CodeSignal_Practice/: CodeSignal_Practice.vcxproj.filters
Codility BinaryGap/: Codility BinaryGap.cpp  Codility BinaryGap.vcxproj
Codility Demo Test/: Codility Demo Test.cpp  Codility Demo Test.vcxproj  Codility Demo Test.vcxproj.filters
Codility MaxCounters/: Codility MaxCounters.cpp  Codility MaxCounters.vcxproj
CodilityTest Example/: CodilityTest Example.cpp  CodilityTest Example.vcxproj.filters
CountDiv/: CountDiv.cpp  CountDiv.vcxproj
CountingElements/: CMakeLists.txt
CountingElements/Codility MaxCounters/: CMakeLists.txt  Codility MaxCounters.vcxproj.filters
CountingElements/CountDiv/: CMakeLists.txt  CountDiv.vcxproj.filters
CountingElements/FrogRiverOne/: CMakeLists.txt  FrogRiverOne.cpp  FrogRiverOne.vcxproj  FrogRiverOne.vcxproj.filters  Text.txt
CountingElements/PermCheck/: CMakeLists.txt  PermCheck.cpp  PermCheck.h  PermCheck.vcxproj  Text.txt  main.cpp
CountingElements/PermCheck/test/: CMakeLists.txt  PermCheckTest.cpp
Cyclic Rotation/: CleanProject.h
Frog Jump/: Frog Jump.cpp  Frog Jump.vcxproj.filters
FrogRiverOne/: FrogRiverOne.cpp
GenomicRange/: CMakeLists.txt  GenomicRange.vcxproj
HackerRank Class/: HackerRank Class.cpp  HackerRank Class.vcxproj  HackerRank Class.vcxproj.filters
Helpers/: Helpers.cpp  Helpers.vcxproj  Helpers.vcxproj.filters
Iterations/: CMakeLists.txt
Iterations/Codility BinaryGap/: Codility BinaryGap.vcxproj.filters
Missing Element/: Missing Element.cpp  Missing Element.vcxproj  Text.txt
NumberOfDiscIntersections/: CMakeLists.txt
OddOccurrencesInArray/: CMakeLists.txt  OddOccurrencesInArray.cpp  Text.txt  hello_test.cc
PermCheck/: PermCheck.cpp  PermCheck.vcxproj.filters
PrefixSum/: PrefixSum.cpp  PrefixSum.vcxproj.filters
PrefixSums/: CMakeLists.txt
PrefixSums/GenomicRange/: CleanProject.cpp  GenomicRange.cpp  GenomicRange.vcxproj.filters
PrefixSums/MinAvgTwoSlice/: CMakeLists.txt  MinAvgTwoSlices.cpp  MinAvgTwoSlices.h  ReadMe.txt  main.cpp
PrefixSums/MinAvgTwoSlice/test/: CMakeLists.txt  MinAvgTwoSlicesTest.cpp
PrefixSums/PrefixSum/: PrefixSum.cpp  PrefixSum.vcxproj
SmallestPosInteger/: CMakeLists.txt  CleanProject.cpp  CleanProject.h  hello_test.cc
SmartViewTest/: CMakeLists.txt  README.md
SmartViewTest/SmartViewTest/: .clang-format  DataSet.h  Entity.h  Helpers.h  Query.h  SmartViewTest.cpp
Sorting/: CMakeLists.txt
Sorting/NumberOfDiscIntersections/: CMakeLists.txt  CleanProject.cpp  hello_test.cc
StacksQueues/: CMakeLists.txt
StacksQueues/StoneWall/: CMakeLists.txt  CleanProject.cpp  CleanProject.h  hello_test.cc
TapeEquilibrium/: CMakeLists.txt  TapeEquilibrium.vcxproj  Text.txt  hello_test.cc
TimeComplexity/: CMakeLists.txt
TimeComplexity/Frog Jump/: CMakeLists.txt  Frog Jump.cpp  Frog Jump.vcxproj  Text.txt
TimeComplexity/Missing Element/: CMakeLists.txt  CleanProject.cpp  CleanProject.h  Missing Element.vcxproj.filters  hello_test.cc
TimeComplexity/TapeEquilibrium/: CleanProject.cpp  CleanProject.h  TapeEquilibrium.cpp  TapeEquilibrium.vcxproj.filters
Topic Max Strings/: CleanProject.cpp  CleanProject.h  hello_test.cc
Topic Split Substring/: CleanProject.cpp
TopicOct2024/: CMakeLists.txt
TopicOct2024/Topic Max Strings/: CMakeLists.txt  CleanProject.cpp  CleanProject.h
TopicOct2024/Topic ReduceBinaryString/: CMakeLists.txt  CleanProject.cpp  hello_test.cc
TopicOct2024/Topic Split Substring/: CMakeLists.txt  CleanProject.h  hello_test.cc
Total Codility Test/: AuxiliaryFunctions.h  Graph.h  Total Codility Test.cpp  Total Codility Test.vcxproj  Total Codility Test.vcxproj.filters
Total Test Two/: Total Test Two.cpp  Total Test Two.vcxproj.filters
TotalJan2021/: TotalJan2021.cpp  TotalJan2021.vcxproj  TotalJan2021.vcxproj.filters
TotalJan2021/CodeSignal_Practice/: CodeSignal_Practice.cpp  CodeSignal_Practice.vcxproj
TotalJan2021/CodilityTest Example/: CodilityTest Example.cpp  CodilityTest Example.vcxproj
TotalJan2021/Total Codility Test/: Graph.cpp  Total Codility Test.vcxproj  Total Codility Test.vcxproj.filters
TotalJan2021/Total Test Two/: Total Test Two.vcxproj
